[add] RSA, H2, fix logics